--- a/library_aop/build.gradle
+++ b/library_aop/build.gradle
@@ -10,10 +10,10 @@ android {
 dependencies {
     implementation project(path: ':library_base')
     implementation project(path: ':library_common')
-    kapt Dependencies.GitHub.GoRouteCompiler
-    implementation Dependencies.JetPack.HiltCore
-    kapt Dependencies.JetPack.HiltApt
-    kapt Dependencies.JetPack.HiltAndroidx
+    kapt Dependencies.GitHub.GO_ROUTER_COMPILER
+    implementation Dependencies.JetPack.HILT_CORE
+    kapt Dependencies.JetPack.HILT_APT
+    kapt Dependencies.JetPack.HILT_ANDROIDX
     //非必须项 👇，如果你想自定义切面需要用到，⚠️支持Java和Kotlin代码写的切面
-    ksp Dependencies.GitHub.AndroidKsp
+    ksp Dependencies.GitHub.ANDROID_KSP
 }
