--- a/library_database/build.gradle
+++ b/library_database/build.gradle
@@ -10,15 +10,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation Dependencies.JetPack.HiltCore
+    implementation Dependencies.JetPack.HILT_CORE
 
-    api Dependencies.JetPack.RoomTime
-    api Dependencies.JetPack.RoomKtx
-    kapt Dependencies.JetPack.RoomCompiler
-    kapt Dependencies.JetPack.HiltApt
-    kapt Dependencies.JetPack.HiltAndroidx
-    kapt Dependencies.GitHub.AutoServiceAnnotations
-    kapt Dependencies.GitHub.GoRouteCompiler
+    api Dependencies.JetPack.ROOM_RUNTIME
+    api Dependencies.JetPack.ROOM_KTX
+    kapt Dependencies.JetPack.ROOM_COMPILER
+    kapt Dependencies.JetPack.HILT_APT
+    kapt Dependencies.JetPack.HILT_ANDROIDX
+    kapt Dependencies.GitHub.AUTO_SERVICE_ANNOTATIONS
+    kapt Dependencies.GitHub.GO_ROUTER_COMPILER
     //依赖Base
     implementation project(path: ':library_base')
 
