--- a/library_network/build.gradle
+++ b/library_network/build.gradle
@@ -9,13 +9,13 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation project(path: ':library_base')
-    api Dependencies.GitHub.OkHttp
-    api Dependencies.GitHub.OkHttpInterceptorLogging
-    api Dependencies.GitHub.Retrofit
-    api Dependencies.GitHub.RetrofitConverterGson
-    implementation Dependencies.JetPack.HiltCore
+    api Dependencies.GitHub.OKHTTP
+    api Dependencies.GitHub.OKHTTP_INTERCEPTOR_LOGGING
+    api Dependencies.GitHub.RETROFIT
+    api Dependencies.GitHub.RETROFIT_CONVERTER_GSON
+    implementation Dependencies.JetPack.HILT_CORE
 
-    kapt Dependencies.JetPack.HiltApt
-    kapt Dependencies.JetPack.HiltAndroidx
+    kapt Dependencies.JetPack.HILT_APT
+    kapt Dependencies.JetPack.HILT_ANDROIDX
 
 }
