--- a/library_util/build.gradle
+++ b/library_util/build.gradle
@@ -15,14 +15,14 @@ dependencies {
     implementation project(path: ':library_common')
     implementation project(path: ':library_base')
     implementation project(path: ':library_database')
-    implementation Dependencies.JetPack.HiltCore
-    implementation Dependencies.GitHub.Glide
+    implementation Dependencies.JetPack.HILT_CORE
+    implementation Dependencies.GitHub.GLIDE
 
-    kapt Dependencies.JetPack.HiltApt
-    kapt Dependencies.JetPack.HiltAndroidx
+    kapt Dependencies.JetPack.HILT_APT
+    kapt Dependencies.JetPack.HILT_ANDROIDX
 
-    kapt Dependencies.GitHub.AutoServiceAnnotations
-    kapt Dependencies.GitHub.GoRouteCompiler
+    kapt Dependencies.GitHub.AUTO_SERVICE_ANNOTATIONS
+    kapt Dependencies.GitHub.GO_ROUTER_COMPILER
 
 
 
