--- a/library_widget/build.gradle
+++ b/library_widget/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     kapt Dependencies.JetPack.HILT_APT
     kapt Dependencies.JetPack.HILT_ANDROIDX
 
-    implementation project(path: ':library_util')
+    implementation(project(":library_util"))
     implementation project(path: ':library_base')
     implementation project(path: ':library_common')
     api Dependencies.GitHub.SWIPE_RECYCLERVIEW
