--- a/settings.gradle
+++ b/settings.gradle
@@ -29,3 +29,4 @@ include ':module_message'
 //include ':library_crypt'
 include ':module_aar:aar'
 include ':module_video'
+include ':module_eye_daily'
