--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,7 +157,8 @@ dependencies {
     implementation project(path:":module_utils")
     implementation project(path:":module_course")
     implementation project(path:":module_message")
-    implementation project(path: ':module_video')
+    implementation project(path:":module_video")
+    implementation project(path:":module_eye_daily")
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
     kapt Dependencies.JetPack.HILT_ANDROIDX
