--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,5 @@ include ':module_message'
 include ':module_aar:aar'
 include ':module_video'
 include ':module_eye_daily'
+//include ':library_video'
+include ':library_video'
