--- a/module_eye_daily/src/main/AndroidManifest.xml
+++ b/module_eye_daily/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
             android:name=".activity.EyeDailyListActivity">
 
         </activity>
+        <activity android:name=".activity.EyeDailyVideoActivity"/>
     </application>
 
 </manifest>
