新增Databinding优化日报列表

--- a/library_util/build.gradle
+++ b/library_util/build.gradle
@@ -4,6 +4,7 @@ import com.knight.wanandroid.buildsrc.*
 android {
     buildFeatures {
         viewBinding = true
+        dataBinding true
     }
     namespace = "com.knight.kotlin.library_util"
 
