--- a/settings.gradle
+++ b/settings.gradle
@@ -32,3 +32,4 @@ include ':module_video'
 include ':module_eye_daily'
 //include ':library_video'
 include ':library_video'
+include ':module_eye_video_detail'
