--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,6 +137,11 @@ android {
         jvmTarget = '17'
     }
 
+    buildFeatures {
+        viewBinding = true
+        dataBinding true
+    }
+
 
 }
 
@@ -159,6 +164,7 @@ dependencies {
     implementation project(path:":module_message")
     implementation project(path:":module_video")
     implementation project(path:":module_eye_daily")
+    implementation project(path:":module_eye_video_detail")
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
     kapt Dependencies.JetPack.HILT_ANDROIDX
