添加开眼发现模块

--- a/settings.gradle
+++ b/settings.gradle
@@ -33,3 +33,4 @@ include ':module_eye_daily'
 //include ':library_video'
 include ':library_video'
 include ':module_eye_video_detail'
+include ':module_eye_discover'
