--- a/app/build.gradle
+++ b/app/build.gradle
@@ -165,6 +165,7 @@ dependencies {
     implementation project(path:":module_video")
     implementation project(path:":module_eye_daily")
     implementation project(path:":module_eye_video_detail")
+    implementation project(path:":module_eye_discover")
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
     kapt Dependencies.JetPack.HILT_ANDROIDX
