--- a/module_eye_discover/src/main/AndroidManifest.xml
+++ b/module_eye_discover/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-      >
+        >
         <activity
-            android:name=".activity.EyeDailyListActivity">
+            android:name=".activity.EyeDiscoverActivity">
 
         </activity>
     </application>
