--- a/module_eye_discover/src/main/AndroidManifest.xml
+++ b/module_eye_discover/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
             android:name=".activity.EyeDiscoverActivity">
 
         </activity>
+        <activity
+            android:name=".activity.EyeCategoryDetailActivity">
+
+        </activity>
     </application>
 
 </manifest>
