完善专题策划页面，改善toolbar标题赋值逻辑

--- a/library_widget/build.gradle
+++ b/library_widget/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'dagger.hilt.android.plugin'
 android {
     buildFeatures {
         viewBinding = true
+        dataBinding true
     }
     namespace = "com.knight.kotlin.library_widget"
 }
