--- a/module_eye_discover/build.gradle
+++ b/module_eye_discover/build.gradle
@@ -7,5 +7,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':library_video')
+    implementation project(path: ':library_share')
     implementation com.knight.wanandroid.buildsrc.Dependencies.GitHub.BANNER
 }
