--- a/settings.gradle
+++ b/settings.gradle
@@ -34,3 +34,6 @@ include ':module_eye_daily'
 include ':library_video'
 include ':module_eye_video_detail'
 include ':module_eye_discover'
+
+//include ':module_share'
+include ':library_share'
