--- a/library_share/build.gradle
+++ b/library_share/build.gradle
@@ -13,6 +13,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation project(path: ':library_base')
+    implementation(project(":library_util"))
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
     kapt Dependencies.JetPack.HILT_ANDROIDX
