--- a/module_realtime/src/main/manifest/AndroidManifest.xml
+++ b/module_realtime/src/main/manifest/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.knight.kotlin.module_wechat">
+    package="com.knight.kotlin.module_realtime">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/wechat_Theme.Wanandroid">
+        android:theme="@style/realtime_Theme.Wanandroid">
 
         <meta-data
             android:name="android.max_aspect"
@@ -33,7 +33,7 @@
             android:value="100000" />
 
         <activity
-            android:name=".activity.WechatTabActivity"
+            android:name=".activity.RealTimeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
