--- a/library_base/build.gradle
+++ b/library_base/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     //必须项
     api Dependencies.GitHub.ANDROID_AOP
     api Dependencies.GitHub.ANDROID_AOP_ANNOTATION
+    api Dependencies.Kotlin.kotlinx_serialization_json
 
 
 }
