适配最新编辑器版本

--- a/library_base/build.gradle
+++ b/library_base/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     api Dependencies.OtherUtils.BUGLY
     //必须项
     api Dependencies.GitHub.ANDROID_AOP
+    api Dependencies.GitHub.ANDROID_EXTRA_AOP
     api Dependencies.GitHub.ANDROID_AOP_ANNOTATION
     api Dependencies.Kotlin.kotlinx_serialization_json
 
