--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,6 +167,7 @@ dependencies {
     implementation project(path:":module_eye_video_detail")
     implementation project(path:":module_eye_discover")
     implementation project(path:":module_realtime")
+    implementation project(path:":module_eye_square")
     implementation Dependencies.JetPack.HILT_CORE
     kapt Dependencies.JetPack.HILT_APT
     kapt Dependencies.JetPack.HILT_ANDROIDX
