--- a/settings.gradle
+++ b/settings.gradle
@@ -38,3 +38,5 @@ include ':module_eye_discover'
 //include ':module_share'
 include ':library_share'
 include ':module_realtime'
+include ':module_eye_square'
+
