1.完成开眼广场模块UI显示(100%) 2.toast库优化 3.权限库优化更新

--- a/base_library.gradle
+++ b/base_library.gradle
@@ -28,6 +28,10 @@ android {
 
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_17.toString()
+        // 确保你设置 Kotlin 编译选项
+        //用于解决-dontwarn java.lang.invoke.StringConcatFactory
+        freeCompilerArgs = ['-Xstring-concat=inline']
+
     }
     buildTypes {
         debug {
