优化完善侧滑接入每日一言API(10%)

--- a/gradle.properties
+++ b/gradle.properties
@@ -38,5 +38,16 @@ android.defaults.buildfeatures.buildconfig=true
 # AGP8 开始 R8 默认是 fullMode ，R8 的 fullMode 会自动处理一些常见的混淆规则，但它比普通模式优化更激进
 # 当然，如果你的项目里 keep 规则是完整的，例如反射使用的所有内容都包含在 keep 规则中，那么 fullMode 应该不会引起什么问题，但是，如果你不希望它工作，那么配置 fullMode 为 false 也是可以的
 # android.enableR8.fullMode=false
-
+#Mob 设置
 MobSDK.spEdition=IZNAO
+#aop加快编译速度设置
+androidAop.debugMode=true 
+#设置为 true 走您项目当前的打包方式 ，false 则为全量打包方式，不写默认false
+androidAop.reflectInvokeMethod = true //设置为 true 反射执行切面方法 ，不写默认 false
+androidAop.reflectInvokeMethod.variantOnlyDebug = true // 设置为 true 则只会在 debug 下才有效，不写默认false
+androidAop.reflectInvokeMethod.static = true // 设置为 true 模拟了非反射的情况，不写默认true
+
+#1、androidAop.reflectInvokeMethod 设置为 true 反射执行切面方法会加快打包速度，设置为 false 二次编译速度和开启反射速度是基本一样的
+#2、请注意androidAop.reflectInvokeMethod.variantOnlyDebug 设置为 true 时 release 包会忽略 androidAop.reflectInvokeMethod = true 的设置自动不走反射，设为 false 时则没有这种效果（不写默认false）
+#3、androidAop.reflectInvokeMethod.static 设置为 true 模拟了非反射的情况兼顾了反射的编译速度，不写默认true，如果想使用反射建议设置此项为 true。设置为 false 则为纯反射
+#4、androidAop.reflectInvokeMethod.variantOnlyDebug 只对 Android 的 Library 有效,对 Java 或 Kotlin 的 Library 无效
