--- a/module_welcome/src/main/manifest/AndroidManifest.xml
+++ b/module_welcome/src/main/manifest/AndroidManifest.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.knight.kotlin.module_welcome">
+    package="com.knight.kotlin.module_welcome"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".WelcomeAloneApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/welcome_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        tools:replace="android:name"
+        >
 
         <meta-data
             android:name="android.max_aspect"
@@ -35,7 +39,8 @@
 
         <activity
             android:name=".activity.WelcomeActivity"
-            android:theme="@style/welcomeAppSplash">
+            android:theme="@style/welcomeAppSplash"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
