--- a/module_home/src/main/manifest/AndroidManifest.xml
+++ b/module_home/src/main/manifest/AndroidManifest.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.knight.kotlin.module_home">
 
     <application
+        android:name=".HomeAloneApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/home_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Wanandroid">
+        android:theme="@style/home_Theme.Wanandroid"
+        tools:replace="android:name"
+        >
 
         <meta-data
             android:name="android.max_aspect"
@@ -36,7 +40,8 @@
 
         <activity
             android:name=".activity.HomeActivity"
-            android:theme="@style/home_Theme.Wanandroid">
+            android:theme="@style/home_Theme.Wanandroid"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
