--- a/module_realtime/src/main/manifest/AndroidManifest.xml
+++ b/module_realtime/src/main/manifest/AndroidManifest.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.knight.kotlin.module_realtime">
+    package="com.knight.kotlin.module_realtime"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".RealTimeAloneApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/realtime_Theme.Wanandroid">
+        android:theme="@style/realtime_Theme.Wanandroid"
+        tools:replace="android:name">
 
         <meta-data
             android:name="android.max_aspect"
