--- a/gradle.properties
+++ b/gradle.properties
@@ -40,12 +40,18 @@ android.defaults.buildfeatures.buildconfig=true
 # android.enableR8.fullMode=false
 #Mob 设置
 MobSDK.spEdition=IZNAO
-#aop加快编译速度设置
-androidAop.debugMode=true 
+#aop加快编译速度设置  https://flyjingfish.github.io/AndroidAOP/zh/getting_started/#app-buildgradle-androidaopconfig
+androidAop.fastDex = true 
+#加速 dexBuilder阶段（默认false）
+androidAop.fastDex.variantOnlyDebug = false
+#只在 debug 起作用（默认false）
 #设置为 true 走您项目当前的打包方式 ，false 则为全量打包方式，不写默认false
-androidAop.reflectInvokeMethod = true //设置为 true 反射执行切面方法 ，不写默认 false
-androidAop.reflectInvokeMethod.variantOnlyDebug = true // 设置为 true 则只会在 debug 下才有效，不写默认false
-androidAop.reflectInvokeMethod.static = true // 设置为 true 模拟了非反射的情况，不写默认true
+androidAop.reflectInvokeMethod = true 
+#设置为 true 反射执行切面方法 ，不写默认 false
+androidAop.reflectInvokeMethod.variantOnlyDebug = true 
+#设置为 true 则只会在 debug 下才有效，不写默认false
+androidAop.reflectInvokeMethod.static = true 
+#设置为 true 模拟了非反射的情况，不写默认true
 
 #1、androidAop.reflectInvokeMethod 设置为 true 反射执行切面方法会加快打包速度，设置为 false 二次编译速度和开启反射速度是基本一样的
 #2、请注意androidAop.reflectInvokeMethod.variantOnlyDebug 设置为 true 时 release 包会忽略 androidAop.reflectInvokeMethod = true 的设置自动不走反射，设为 false 时则没有这种效果（不写默认false）
