--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="929JduF7WMY53BuMS8LBm12K0yma7plU" >
+            android:value="" >
         </meta-data>
 
         <!-- 百度 地图开启子进程 -->
